Amended bower and npm name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "GnuPlottable",
+  "name": "plottable-node",
   "version": "0.1.0",
   "authors": [
     "Andrei Cioara <acioara@palantir.com>"
